fix visible part

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1055,7 +1055,7 @@ textarea:focus {
 }
 
 .popup_calc_profile_content .checkbox {
-	display: none;
+	opacity: 0;
 }
 
 .popup_calc_profile_content .checkbox-custom {
